added console-setup & lightdm

--- a/supervisor.conf
+++ b/supervisor.conf
@@ -1,3 +1,6 @@
+[program:console-setup]
+command=/etc/init.d/console-setup start
+
 [program:vncserver]
 command=vncserver -geometry 1600x900 :1
 user=ubuntu
@@ -7,3 +10,6 @@ command=/home/ubuntu/noVNC/utils/launch.sh --vnc localhost:5901
 user=ubuntu
 stdout_logfile=/var/log/novnc.log
 redirect_stderr=true
+
+[program:lightdm]
+command=DISPLAY=:1 && /etc/init.d/lightdm start
