wingpanel & plank added

--- a/supervisor.conf
+++ b/supervisor.conf
@@ -11,5 +11,14 @@ user=ubuntu
 stdout_logfile=/var/log/novnc.log
 redirect_stderr=true
 
-[program:lightdm]
-command=DISPLAY=:1 && /etc/init.d/lightdm start
+[program:pantheon]
+command=gnome-session --session=pantheon
+user=ubuntu
+
+[program:plank]
+command=plank --display=:1
+user=ubuntu
+
+[program:wingpanel]
+command=wingpanel --display=:1
+user=ubuntu
